# DataLiteracyWS23

./: .gitignore  LICENSE  README.md  pip_wrapper.sh  pyproject.toml  requirements.txt  setup_venv.sh
.github/workflows/: build-pdf.yml  build_tex.yml  python-app.yml  readme.yml
config/: credentials.example.yml  download - Copy.yml  download.yml
doc/: SecEff_notes.md  Todos.md  argumentation_plan.md  meeting.md  potential_sources.md  potential_sources.txt
doc/report/: bibliography.bib  build_figures.sh  report_template.tex
exp/: JS-001-ExploreCorrelationColsingsABI.ipynb  JS-002-Repeaters.ipynb  JS-002-Students_With_Special_Edu_Support_Gender.ipynb  JS-003-Students_With_Special_Edu_Support.ipynb  JS-003-Students_With_Special_Edu_Support_Gender.ipynb  JS-003-Students_With_Special_Edu_Support_No_Gender.ipynb  JS-004-Graduates.ipynb  JS-004-No-Hauptschool-Degree.ipynb  JS-004-Students_With_Special_Edu_Support_No_Gender.ipynb  JS-005-Graduates.ipynb  JS_heatmap_demo.ipynb  Js-005-Correlationen-No-Hauptschulabschluss-Special-Edu-Support.ipynb  Js-006-Correlationen-No-Hauptschulabschluss-Special-Edu-Support.ipynb  Js-006-Correlationen-Repeaters-Special-Edu-Support.ipynb  Js-007-Correlationen-Grades-Edu-Support.ipynb  Js-007-Correlationen-Repeaters-Special-Edu-Support.ipynb  Js-008-Correlationen-Grades-Edu-Support.ipynb  TF-001-ExploreABIGrades.ipynb  TF-002-ExplorePisaStudies.ipynb  TF-003-ExploreNumberOfTeachers.ipynb  TF-004-ExploreNumberOfChildren.ipynb  TF-005-TeachersToChildren.ipynb  TF-006-ParserPlayground.ipynb  TF-007-SchoolBudgets.ipynb  TF-008-CorrelationsBudgetGradesRepeaters.ipynb  TF-009-CorrelationsTeacherPerStudent.ipynb  TF-009-MonsterMerge.ipynb  TF-010-MonsterMerge.ipynb  TF-011-CorrelationBudgetTeacher.ipynb  tmp_loader.ipynb
src/: executable.py  overview_grades.ipynb
src/custom_genesisclient/: __init__.py
src/data_lit_covid_school/: __init__.py  children.ipynb  overview_grades.ipynb  pisa_analysis.ipynb  teachers.ipynb
src/data_lit_school_closing/: school_closings.ipynb
src/genesisclient/: __init__.py
src/helpers/: config_util.py  download.py  download_grades.py
src/school_analysis/: README.md  __init__.py  download_all.py  main.py
src/util/: plot_util.py
test/: test_analysis.py  test_loaders.py  test_parsers.py
test/pipe/: README  test_example.py  test_loaders.py  test_parsers.py  test_preprocessing.py
test/test_utils/: __init__.py  original_parsers.py
(+32 files in other folders)
