[tool.poetry]
name = "data_lit_covid_school"
version = "0.1.0"
description = "This project aims to analyze the incluence of the covid-19 pandemic on the german school system"
authors = ["Tom Freudenmann <tom.freudenmann@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/data_lit_covid_school"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"
xlrd = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
