[tool.poetry]
name = "data_lit_covid_school"
version = "0.1.0"
description = "This project aims to analyze the incluence of the covid-19 pandemic on the german school system"
authors = ["Tom Freudenmann <tom.freudenmann@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/data_lit_covid_school"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"
xlrd = "^2.0.1"
pygenesis = {git = "https://github.com/rudolf-bauer/genesisclient.git"}
genesisclient = "^0.0.7"
logging = "^0.4.9.6"
lxml = "^4.9.4"
suds-py3 = "^1.4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
